Make workout sets fully editable
